--- a/MatchGame.html
+++ b/MatchGame.html
@@ -1,170 +1,189 @@
-class Card 
-{
-    constructor (cards)
-    {
-        this.arr = cards;
-        this.score = document.getElementById("numCount");
-    }
+<!-- Kevin Wang, Section 83 Even 5/6, 9/30/2021 -->
 
-    /*
-     * initialized the game
-     */
-    startGame ()
-    {
-        console.log ("Start!");
-        this.cardToCheck = null;
-        this.count = 0;
-        this.matchedCards = [];
-        this.busy = false;
-        this.removeFlipped ();
-        this.shuffle (); 
-        this.score.innerHTML = this.count;
-        //console.log ("start: " + this.busy);
-        //console.log(this.cardToCheck);
-    }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Match Game </title>
+    
+    <link rel="stylesheet" type="text/css" href="./style.css"/>
+    <script src = "script.js" async> </script>
+</head>
 
-    /*
-     * flips the card at you clicked on 
-     */
-    flipCard (card)
-    {
-        /*
-            console.log (card != this.cardToCheck);
-            console.log (!this.matchedCards.includes(card));
-            console.log ("start: " + this.busy);
-        */
-        if (!this.busy && card != this.cardToCheck && !this.matchedCards.includes(card))
-        {
-            this.count++;
-            //console.log ("num: " + this.count);
-            this.score.innerHTML = this.count;
-            /*
-             * Adding visible to the card's class so it flips to the other side
-             */
-            card.classList.add("visible");
+<body>
+    <h1> Match Game </h1>
 
-            if (this.cardToCheck != null)
-            {
-                this.checkMatch (card);
-                //console.log ("a: " + this.getCardType (this.cardToCheck));
-                this.cardToCheck = null;
-            }
-            else
-            {
-                this.cardToCheck = card;
-                //console.log("f: " + this.getCardType (this.cardToCheck));
-            }
-        }
-        //console.log ("flipped");
-    }
+    <hr/>
 
-    /*
-     * check whether two cards match each other
-     */
-    checkMatch (card)
-    {
-        if (this.getCardType (card) == this.getCardType (this.cardToCheck))
-        {
-            //console.log ("checked");
-            this.matchedCards.push(card);
-            this.matchedCards.push(this.cardToCheck);
-            //card.classList.add("revealed");
-            //this.cardToCheck.classList.add("revealed");
-            if (this.matchedCards.length == 16)
-            {
-                this.overlayOn ();
-            }
-        }
-        else
-        {
-            //console.log ("busy: " + this.busy);
-            this.misMatched (card, this.cardToCheck);
-            //setTimeout (function () {console.log ("go!");}, 500);
-        }
-    }
+    <div id = "overlay" class = "comment">
+        <div id = "beginning" class = "paragraph">
+            <p>
+                The game mechanics are simple. Click on an image to reveal it. 
+                It will stay revealed until you click on a second image. 
+                If both images match, they will stay revealed. If they don’t, 
+                they will both change back into the hidden icon. 
+                Once all of the images have been revealed the game ends. 
+                The score is determined by the number of clicks. 
+                Each time you click on one of the images, you score
+                will increment by 1, where the lowest possible score is 16 if you 
+                already know where all of the images are or you are insanely lucky). 
+                When the reset button is clicked, all of the images will return 
+                to the hidden icon and the score will be reset to 0.
+            </p>
+            <button class = "custom" onclick = "start ();"> Start Game </button>
+        </div>
+        <div id = "overlay1" class = "comment16">
+            <p> Great Job! You must be one lucky fellow! </p>
+            <button class = "custom" onclick = "start ();"> Restart Game </button>
+        </div>
 
-    /*
-     * flips the two most recent flipped card back
-     */
-    misMatched (card1, card2)
-    {
-        this.busy = true;
-        setTimeout (() => {card1.classList.remove("visible"); card2.classList.remove("visible"); this.busy = false;}, 500)
-    }
+        <div id = "overlay2" class = "comment17-35">
+            <p> Keep trying! </p>
+            <button class = "custom" onclick = "start ();"> Restart Game </button>
+        </div>
 
-    /*
-     * flips all the card back
-     */
-    removeFlipped ()
-    {
-        //card.classList.remove("revealed");
-        this.arr.forEach (card => {card.classList.remove("visible");})
-    }
+        <div id = "overlay3" class = "comment36">
+            <p> Welp, you must be one unlucky fellow </p>
+            <button class = "custom" onclick = "start ();"> Restart Game </button>
+        </div>
+    </div>
 
-    /*
-     * changes the order of the cards
-     */
-    shuffle ()
-    {
-        for (let i = this.arr.length - 1; i > 0; i--)
-        {
-            let num = Math.floor (Math.random () * (i + 1));
-            this.arr [num].style.order = i;
-            this.arr [i].style.order = num;
-        }
-    }
+    <div class = "box">
+        <div class = "card"> 
+            <div class = "card-back deck">
+                <img class = "back" src = "images/Back.png">
+            </div>
+            <div class = "card-front deck">
+                <img class = "front" src = "images/pikachu.jpg">
+            </div>
+        </div>
+        <div class = "card"> 
+            <div class = "card-back deck">
+                <img class = "back" src = "images/Back.png">
+            </div>
+            <div class = "card-front deck">
+                <img class = "front" src = "images/pikachu.jpg">
+            </div>
+        </div>
+        <div class = "card"> 
+            <div class = "card-back deck">
+                <img class = "back" src = "images/Back.png">
+            </div>
+            <div class = "card-front deck">
+                <img class = "front" src = "images/vulpix-alolan.jpg">
+            </div>
+        </div>
+        <div class = "card"> 
+            <div class = "card-back deck">
+                <img class = "back" src = "images/Back.png">
+            </div>
+            <div class = "card-front deck">
+                <img class = "front" src = "images/vulpix-alolan.jpg">
+            </div>
+        </div>
+        <div class = "card"> 
+            <div class = "card-back deck">
+                <img class = "back" src = "images/Back.png">
+            </div>
+            <div class = "card-front deck">
+                <img class = "front" src = "images/gengar.jpg">
+            </div>
+        </div>
+        <div class = "card"> 
+            <div class = "card-back deck">
+                <img class = "back" src = "images/Back.png">
+            </div>
+            <div class = "card-front deck">
+                <img class = "front" src = "images/gengar.jpg">
+            </div>
+        </div>
+        <div class = "card"> 
+            <div class = "card-back deck">
+                <img class = "back" src = "images/Back.png">
+            </div>
+            <div class = "card-front deck">
+                <img class = "front" src = "images/snorlax.jpg">
+            </div>
+        </div>
+        <div class = "card"> 
+            <div class = "card-back deck">
+                <img class = "back" src = "images/Back.png">
+            </div>
+            <div class = "card-front deck">
+                <img class = "front" src = "images/snorlax.jpg">
+            </div>
+        </div>
+        <div class = "card"> 
+            <div class = "card-back deck">
+                <img class = "back" src = "images/Back.png">
+            </div>
+            <div class = "card-front deck">
+                <img class = "front" src = "images/umbreon.jpg">
+            </div>
+        </div>
+        <div class = "card"> 
+            <div class = "card-back deck">
+                <img class = "back" src = "images/Back.png">
+            </div>
+            <div class = "card-front deck">
+                <img class = "front" src = "images/umbreon.jpg">
+            </div>
+        </div>
+        <div class = "card"> 
+            <div class = "card-back deck">
+                <img class = "back" src = "images/Back.png">
+            </div>
+            <div class = "card-front deck">
+                <img class = "front" src = "images/dragonair.jpg">
+            </div>
+        </div>
+        <div class = "card"> 
+            <div class = "card-back deck">
+                <img class = "back" src = "images/Back.png">
+            </div>
+            <div class = "card-front deck">
+                <img class = "front" src = "images/dragonair.jpg">
+            </div>
+        </div>
+        <div class = "card"> 
+            <div class = "card-back deck">
+                <img class = "back" src = "images/Back.png">
+            </div>
+            <div class = "card-front deck">
+                <img class = "front" src = "images/espeon.jpg">
+            </div>
+        </div>
+        <div class = "card"> 
+            <div class = "card-back deck">
+                <img class = "back" src = "images/Back.png">
+            </div>
+            <div class = "card-front deck">
+                <img class = "front" src = "images/espeon.jpg">
+            </div>
+        </div>
+        <div class = "card"> 
+            <div class = "card-back deck">
+                <img class = "back" src = "images/Back.png">
+            </div>
+            <div class = "card-front deck">
+                <img class = "front" src = "images/mew.jpg">
+            </div>
+        </div>
+        <div class = "card"> 
+            <div class = "card-back deck">
+                <img class = "back" src = "images/Back.png">
+            </div>
+            <div class = "card-front deck">
+                <img class = "front" src = "images/mew.jpg">
+            </div>
+        </div>
+    </div>
 
-    /*
-     * return source of the card
-     */
-    getCardType (card)
-    {
-        return card.getElementsByClassName ("front")[0].src;
-    }
-
-    overlayOff ()
-    {
-        document.getElementById ("overlay").style.display = "none";
-        document.getElementById ("beginning").style.display = "none";
-        document.getElementById ("overlay1").style.display = "none";
-        document.getElementById ("overlay2").style.display = "none";
-        document.getElementById ("overlay3").style.display = "none";
-    }
-
-    overlayOn ()
-    {
-        if (this.count == 16)
-        {
-            document.getElementById ("overlay").style.display = "block";
-            document.getElementById ("overlay1").style.display = "block";
-        }
-        else if (this.count > 16 && this.count <= 35)
-        {
-            document.getElementById ("overlay").style.display = "block";
-            document.getElementById ("overlay2").style.display = "block";
-        }
-        else
-        {
-            document.getElementById ("overlay").style.display = "block";
-            document.getElementById ("overlay3").style.display = "block";
-        }
-    }
-}
-
-function start ()
-{
-    /*
-     * creates an array for the pokemon cards
-     */
-    pokemonCards = Array.from (document.getElementsByClassName("card"));
-    //console.log(pokemonCards.length);
-    pokemonArr = new Card (pokemonCards)
-    pokemonArr.startGame ();
-
-    pokemonArr.overlayOff ();
-    /*
-     * add an "event" or a function to the card so that it will flip over when you click on it
-     */
-    pokemonCards.forEach (function (card) {card.addEventListener("click", function () {pokemonArr.flipCard(card);})});
-
-}
+    <div>
+        <h2> Count: <span id = "numCount"> </span> </h2>
+        <button onclick = "start ();"> Restart </button>
+    </div>
+</body>
+</html>
