--- a/MatchGame.html
+++ b/MatchGame.html
@@ -1,5 +1,20 @@
 <!-- Kevin Wang, Section 83 Even 5/6, 9/30/2021 -->
 
+<!--
+  Reflection:
+	Something that went well is when I was coding JavaScript because it is 
+    pretty similar to Java. Additionally, trying to create the style of the 
+    game is relatively easy. However, something that didn’t go as intended 
+    is when I was trying to use some of the functions in JavaScript because 
+    I have never used them before and it is kind of difficult to understand 
+    how they worked. Not only that but placing the cards and trying to turn 
+    them over was also difficult. There were many things that I have learned 
+    from researching about functions to use in order to code this matching 
+    game. Two of them were the “addEventListener” and the “setTimeout.” The 
+    “addEventListener” sets up a function to any object, while the “setTimeout” 
+    sets a timer that executes a function or specified piece of code once the timer expires.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
